skeleton html structure

--- a/personal-card/index.html
+++ b/personal-card/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
     <main class="main-container">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ad nostrum expedita alias porro voluptates, odit debitis blanditiis, voluptatem nisi quidem quasi, dolorum dolores temporibus harum laudantium. Velit, repellendus incidunt!
+        <figure class="img-container">
+            <img src="./assets/images/me.png" alt="">
+        </figure>
+        <div class="name-location">
+            <h2>Hamza Mirza</h2>
+            <p>Hannover, Germany</p>
+        </div>
+        <p class="slogan">"If you can do it once, you can do it again."</p>
+        <ul class="social-links">
+            <li class="link">Github</li>
+        </ul>
     </main>
 </body>
 </html>
