styles added for now

--- a/personal-card/index.html
+++ b/personal-card/index.html
@@ -15,7 +15,7 @@
             <h2>Hamza Mirza</h2>
             <p>Hannover, Germany</p>
         </div>
-        <p class="slogan">"If you can do it once, you can do it again."</p>
+        <p class="slogan">"If you did it once, you can do it again."</p>
         <ul class="social-links">
             <li class="link">Github</li>
         </ul>
