map over array to render social links instead of hardcoding them

--- a/personal-card/index.html
+++ b/personal-card/index.html
@@ -17,8 +17,11 @@
         </div>
         <p class="slogan">"If you did it once, you can do it again."</p>
         <ul class="social-links">
-            <li class="link">Github</li>
         </ul>
     </main>
+
+    <script type="module" src="main.js">
+
+    </script>
 </body>
 </html>
