--- a/personal-card/index.html
+++ b/personal-card/index.html
@@ -10,7 +10,7 @@
 <body>
     <main class="main-container">
         <figure class="img-container">
-            <img src="./assets/images/me.png" alt="">
+            <img src="./assets/images/me.png" alt="photo of Hamza Mirza">
         </figure>
         <div class="name-location">
             <h2>Hamza Mirza</h2>
