added font faces

--- a/faq-accordion/index.html
+++ b/faq-accordion/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, impedit totam ipsam recusandae voluptas a perferendis deleniti iure quis voluptatem culpa consectetur, necessitatibus consequuntur laboriosam reprehenderit, adipisci officia vero animi.</p>
     <script type="module" src="./main.js"></script>
 </body>
 </html>
