styles for now finisjed

--- a/faq-accordion/index.html
+++ b/faq-accordion/index.html
@@ -7,7 +7,41 @@
 </head>
 <body>
     <main class="main-container">
-        <h2></h2>
+        <div class="content-container">
+            <div class="title-icon">
+                <span class="material-symbols-rounded">
+                    stars
+                </span>
+                <h2>FAQ's</h2>
+            </div>
+            <ul class="faq-list">
+                <li class="question-item">
+                    <div class="question-icon">
+                        <p class="question">What is Frontend Mentor, and how will it help me?</p>
+                        <span class="material-symbols-rounded">
+                            add_circle
+                        </span>
+                    </div>
+                    <p class="answer">Lorem ipsum dolor sit amet consectetur, adipisicing elit. At, repudiandae, laudantium ducimus reiciendis atque, amet dolore distinctio error totam sit esse fugit voluptatum quibusdam ullam nulla accusantium architecto impedit iste.</p>
+                </li>
+                <li class="question-item">
+                    <div class="question-icon">
+                        <p class="question">What is Frontend Mentor, and how will it help me?</p>
+                        <span class="material-symbols-rounded">
+                            add_circle
+                        </span>
+                    </div>
+                </li>
+                <li class="question-item">
+                    <div class="question-icon">
+                        <p class="question">What is Frontend Mentor, and how will it help me?</p>
+                        <span class="material-symbols-rounded">
+                            add_circle
+                        </span>
+                    </div>
+                </li> 
+            </ul>
+        </div>
     </main>
     <script type="module" src="./main.js"></script>
 </body>
